<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="10dp"
    card_view:cardBackgroundColor="@color/cardColor"
    card_view:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/productId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:maxLength="50"
            android:fontFamily="sans-serif-light"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toEndOf="@id/image"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:text="@string/name" />

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:maxLines="1"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@string/temperature"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/textColorLight"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/favourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:maxLines="1"
            android:padding="10dp"
            android:paddingBottom="8dp"
            android:src="@drawable/ic_favorite"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/temperature"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-light"
            android:maxLines="1"
            android:paddingTop="4dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/textColorLight"
            card_view:layout_constraintStart_toEndOf="@id/image"
            card_view:layout_constraintTop_toBottomOf="@+id/name"
            tools:text="@string/date" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-light"
            android:maxLines="1"
            android:paddingTop="4dp"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textColor="@color/textColorLight"
            card_view:layout_constraintStart_toEndOf="@id/image"
            card_view:layout_constraintTop_toBottomOf="@+id/date"
            tools:text="@string/time" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
