<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/imageCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:cardBackgroundColor="@color/cardColor"
                card_view:cardCornerRadius="2dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="250.0dp"
                        android:contentDescription="@string/no_accessibility"
                        android:padding="16dp"
                        android:src="@drawable/placeholder"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:maxLines="1"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="8dp"
                        android:text="@string/temperature"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textColor="@color/textColorLight"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/image"/>

                    <ImageView
                        android:id="@+id/favourite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:paddingBottom="8dp"
                        card_view:ignore="MissingConstraints"
                        android:src="@drawable/ic_favorite"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/temperature"/>

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:maxLines="2"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:text="@string/name"
                        android:textColor="@color/textColor"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/image" />

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:maxLines="1"
                        android:paddingStart="16dp"
                        android:paddingTop="4dp"
                        android:paddingEnd="16dp"
                        android:text="@string/date"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/textColorLight"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/name" />

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:maxLines="1"
                        android:paddingStart="16dp"
                        android:paddingTop="4dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="4dp"
                        android:text="@string/time"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:textColor="@color/textColorLight"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/date" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/moreDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageCard"
                app:cardBackgroundColor="@color/cardColor"
                card_view:cardCornerRadius="2dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/sunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:maxLines="1"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="8dp"
                        android:text="@string/sunrise"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textColor="@color/textColorLight"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:drawablePadding="5dp"
                        app:drawableStartCompat="@drawable/ic_baseline_wb_sunny_24" />

                    <TextView
                        android:id="@+id/sunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:maxLines="1"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="8dp"
                        android:text="@string/sunset"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textColor="@color/textColorLight"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:drawablePadding="5dp"
                        app:drawableStartCompat="@drawable/ic_baseline_nightlight_24"/>

                    <TextView
                        android:id="@+id/sunriseTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:maxLines="2"
                        android:padding="16dp"
                        android:text="@string/time"
                        android:textColor="@color/textColor"
                        android:textSize="20sp"
                        app:layout_constraintTop_toBottomOf="@+id/sunset"
                        app:layout_constraintStart_toStartOf="parent"
                        />

                    <TextView
                        android:id="@+id/sunsetTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:maxLines="2"
                        android:padding="16dp"
                        android:text="@string/time"
                        android:textColor="@color/textColor"
                        android:textSize="20sp"
                        app:layout_constraintTop_toBottomOf="@+id/sunrise"
                        app:layout_constraintEnd_toEndOf="parent"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <TextView
        android:id="@+id/more"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/black"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/more"
        android:textAllCaps="true"
        android:textColor="@color/textColorBright"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView" />

</androidx.constraintlayout.widget.ConstraintLayout>
